<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">
    
    
    <LinearLayout
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/loggedInAs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:weightSum="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:layout_weight="50"
                android:text="@string/name"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/displayName"
                android:layout_weight="50"
                android:text="@string/name"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:weightSum="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="50"
                android:text="@string/email"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/email"
                android:layout_weight="50"
                android:text="@string/name"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <Button
            android:text="@string/logout"
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>

</RelativeLayout>