<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailPasswordAuth">

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="5dp"
        android:layout_margin="15dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/fahamu"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center"
                android:layout_width="130dp"
                android:layout_height="130dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputlay"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/black"
                app:errorTextColor="@android:color/holo_red_light"
                android:hint="@string/email"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:hintTextColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edt"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                android:id="@+id/passwordTextInputLay"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/black"
                app:errorTextColor="@android:color/holo_red_light"
                android:hint="@string/password"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/loginText"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="50dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingRight="50dp"
                android:text="@string/signIn"
                android:textColor="@color/white"
                android:background="@color/purple_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center"
                android:weightSum="10"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAlignment="center"
                    android:layout_weight="7"
                    android:text="@string/no_registered"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/newAcount"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_light"
                    android:layout_weight="3"
                    android:text="@string/register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>